--- a/src/sass/modules/_chefs.scss
+++ b/src/sass/modules/_chefs.scss
@@ -105,3 +105,9 @@
         margin-bottom: 10px;
     }
 }
+
+@media screen and (max-width: 426px) {
+    #chefs {
+        padding-top: 7%;
+    }
+}
