--- a/src/sass/modules/_contact.scss
+++ b/src/sass/modules/_contact.scss
@@ -74,3 +74,10 @@
         width: 48.4%;
     }
 }
+
+@media screen and (max-width: 426px) {
+    #rightContact .field-split {
+        width: 100%;
+        margin-bottom: 1%;
+    }
+}
