--- a/src/sass/modules/_reservation.scss
+++ b/src/sass/modules/_reservation.scss
@@ -59,7 +59,7 @@
 }
 
 // Media Queries
-@media screen and (max-width: 991px) {
+@media (min-width: 769px) and (max-width: 991px) {
     .form-style-9 ul li .field-split{
         width: 32.1%;
         margin: 0.5%;
@@ -67,8 +67,13 @@
     }
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 768px) {
     #reservation {
         padding-top: 15%;
+    }
+    .form-style-9 ul li .field-split{
+        width: 32%;
+        margin: 0.5%;
+        margin-left: 0%;
     }
 }
